Fixed memory leaks which were breaking the test.(http://goo.gl/iA8QWo)